# agente-youtube

./: .env.example  .gitignore  PR.md  README.md  coordinator.py  main.py  pyproject.toml  urls.csv
agents/: aggregator.py  base.py  generator.py  proponent.py  reviewer.py  transcriber.py  writer.py
models/: openrouter_api.py
prompts/: aggregator.md  generator.md  proponent.md  reviewer.md  transcriber.md
