[project]
name = "agente-youtube"
version = "0.1.0"
description = "Sistema multi-agente para procesamiento de videos YouTube"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "youtube-transcript-api>=0.6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]
